--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Awwwwwww Reddit</title>
-  <base href="C:/Program Files/Git/angular-lab-3/">
+  <base href="/angular-lab-3/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.61fdbc0ce5d5c19a7fd8.css"></head>
